Added final functionality to display new messages on the main home screen

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ html
     head
       title Message Board
     body
-    p #{title} <button>New Message </button>
+    p #{title} <button ><a href='./new'>New</a> </button>
     - const name = {subtitle}
     each value in name
       ul
