Solved bug in pug file causing the JSON output to output in an odd format and not on seperate lines

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,3 +22,21 @@ input {
   border-color: black;
   border-style: solid;
 }
+
+.f {
+  display: flex;
+  flex-direction: column;
+  width:50vw;
+}
+
+.homePagePosts {
+  color: red;
+}
+
+.ul {
+  white-space: pre;
+}
+.li {
+  white-space: pre;
+  color: red;
+}
