--- a/public/stylesheets/formstyle.css
+++ b/public/stylesheets/formstyle.css
@@ -1,20 +1,24 @@
 .formPageBody {
-    background-color: lightcoral;
+    background-color:  white ;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    
 }
 
 .newMsgForm{
     height: 30rem;
     padding: 0 5vw;
     border-style: solid;
-    border-color: black;
+    border-color: #93867F;
+    background-color: #f7f7f7;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    box-shadow: 4px 4px 6px 1px #6B6761;
 }
 
   input[type=text] {
@@ -22,19 +26,46 @@
     width: 60vw;
     max-width: 15rem;
     padding: .25rem;
-    border-color: black;
+    border-radius: 10px;
     border-style: solid;
+    border-width: 2px;
+    border-color: #93867F;
+    margin-bottom: 1rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
   }
-.textareaInput {
-    margin-top: .5rem;
+.textareaInput {s
     padding: .5rem;
     width: 75vw;
     max-width: 30rem;
-    height: 300px;
+    height: 15rem;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #93867F;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: .65px
 }
 .submitBtn {
     align-self: flex-end;
-    margin:.25rem;
+    margin: .55rem .25rem;
+    height: 2.5rem;
+    width: 7rem;
+    background-color:#345678;
+    color:white;
+    border-radius: 10px;
+    letter-spacing: .65px;
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+.submitBtn:active{
+   opacity: .5;
+}
+@media(min-width:1024px) {
+    .submitBtn:hover {
+        cursor: pointer;
+    }
 }
 
   
