--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,3 @@
-//- extends layout
-
-//- block content
-//-   h1= title
-//-   p #{subtitle}
-
-
 doctype html 
 html 
     head
@@ -20,14 +13,14 @@ html
         <header class='headerWrap'>
           h1 #{title}
           <h2 class='welcomeMsgWrap'> Welcome to the dev bulletin board!<br> Post your recent thoughts on tech stacks, the job market or just general web development stuff here!</h2>
-          a(class='newMsgBtn' href='/new') New 
+          a(class='newMsgBtn' href='/new') New Post
         </header> 
         <section class='postsWrap'>
           each message in subtitle
             <div class='homePagePosts'>            
-              <h3 class='userDiv'> User:<br> #{message.user}</h3>
-              <h3 class='messageDiv'> Message: <p>#{message.text}</p></h3>
-              <h4 class='dateDiv'> Date:<br> #{message.added}</h4>
+              <h3 class='userDiv'> User:</h3><span class='nameDiv'>#{message.user}</span>
+              <h3 class='messageDiv'> Message:</h3> <p>#{message.text}</p>
+              <h4 class='dateDiv'> Date:</h4> #{message.added}
             </div>
         </section>
         
